noinst_LIBRARIES = libext2fs.a
libext2fs_a_SOURCES = ext2_err.c \
	alloc.c \
	alloc_sb.c \
	alloc_stats.c \
	alloc_tables.c \
	badblocks.c \
	bb_compat.c \
	bb_inode.c \
	bitmaps.c \
	bitops.c \
	block.c \
	bmap.c \
	check_desc.c \
	closefs.c \
	cmp_bitmaps.c \
	dblist.c \
	dblist_dir.c \
	dirblock.c \
	dirhash.c \
	dir_iterate.c \
	dupfs.c \
	expanddir.c \
	ext_attr.c \
	fileio.c \
	finddev.c \
	flushb.c \
	freefs.c \
	gen_bitmap.c \
	get_pathname.c \
	getsize.c \
	getsectsize.c \
	icount.c \
	ind_block.c \
	initialize.c \
	inline.c \
	inode.c \
	inode_io.c \
	imager.c \
	io_manager.c \
	ismounted.c \
	link.c \
	llseek.c \
	lookup.c \
	mkdir.c \
	mkjournal.c \
	namei.c \
	native.c \
	newdir.c \
	openfs.c \
	read_bb.c \
	read_bb_file.c \
	res_gdt.c \
	rs_bitmap.c \
	rw_bitmaps.c \
	swapfs.c \
	tdb.c \
	test_io.c \
	unix_io.c \
	unlink.c \
	valid_blk.c \
	version.c \
	write_bb_file.c \
	tst_badblocks.c \
	tst_bitops.c \
	tst_byteswap.c \
	tst_getsize.c \
	tst_iscan.c \
	bitops.h \
	ext2_err.h \
	ext2fsP.h \
	irel.h \
	kernel-jbd.h \
	brel.h \
	ext2_ext_attr.h \
	ext2_io.h \
	jfs_compat.h \
	kernel-list.h \
	dosio.h \
	ext2_fs.h \
	ext2_types.h \
	jfs_dat.h \
	tdb.h \
	e2image.h \
	ext2fs.h \
	ext3_extents.h \
	jfs_user.h \
	version.h

libext2fs_a_CFLAGS = -I.. -I../et

